objects/advpm__Timer__c.object
<CustomObject>
    <fields>
        <fullName>advpm__Context_Record_ID__c</fullName>
        <label>Context Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Elapsed_Time__c</fullName>
        <label>Elapsed Time (in Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Last_Pause_Timestamp__c</fullName>
        <label>Last Pause Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>advpm__Last_Start_Timestamp__c</fullName>
        <label>Last Start Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>advpm__Matter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Timers</relationshipLabel>
        <relationshipName>Timers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paused</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Timer</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>